Update README.md
add xverify:none to linux